# DataLint-ml

./: README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: CI.yml  ci.yml  update-version.yml
scripts/: README.md  debug_model.py  path.py  run-black.sh  run-pytest.sh  run-ruff.sh  setup-env.sh  setup_env.sh  test_model.py  training_from_csv.py
src/: debug_model.py  metric_model.py  training_from_csv.py
src/datalint_ml/: debug_model.py  metric_model.py  training_from_csv.py
src/datalint_ml/utils/: metrics.py  model.py
src/utils/: model.py
tests/: README.md  test_utils.py
utils/: metrics.py  model.py
