[tool.poetry]
name = "DataLint-ml"
version = "1.0.0"
readme = "README.md"
license = "LICENSE"
authors = ["Maxime-Cllt"]

packages = [
    { include = "DataLint_ml", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
torch = "2.7.0"
scikit-learn = ">=1.7.1"
pandas = ">=2.3.1"
numpy = ">=2.3.2"

[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"