[project]
name = "DataLint-ml"
version = "1.0.0"
readme = "README.md"
authors = [
    { name = "Maxime-Cllt" }
]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.0",
    "scikit-learn>=1.7.2",
    "pandas>=2.3.1",
    "numpy>=2.3.2",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "transformers>=4.56.0",
    "datasets>=4.0.0",
    "torchinfo>=1.8.0",
    "sqlalchemy>=2.0.43",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "black>=25.1.0",
    "ruff>=0.12.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"